# python-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: cicd.yaml
tests/: test_pytest_version.py
