[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A Python template to use in my Python projects."
authors = ["Jitse-Jan <code@jitsejan.com>"]
license = "BSD2"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^21.5b1"
isort = "^5.8.0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pre-commit = "^2.12.1"
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
